test/parser/interpolated_strings/empty_expression_error.exp
Error: Unexpected token `}`
test/parser/interpolated_strings/empty_expression_error.myte:4:8
 4 |   `foo${}bar`;
   |         ^